@@ -4,7 +4,7 @@ import com.google.auto.service.AutoService;
 import io.opentelemetry.javaagent.extension.instrumentation.InstrumentationModule;
 import io.opentelemetry.javaagent.extension.instrumentation.TypeInstrumentation;
 
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 
 @AutoService(InstrumentationModule.class)
@@ -16,6 +16,11 @@ public class LocalInstrumentationModule extends InstrumentationModule {
 
     @Override
     public List<TypeInstrumentation> typeInstrumentations() {
-        return Collections.singletonList(new LocalTypeInstrumentation());
+        return Arrays.asList(new LocalInstanceTypeInstrumentation(), new TraceSpanInstrumentation(), new LocalContextTypeInstrumentation());
+    }
+
+    @Override
+    public List<String> getAdditionalHelperClassNames() {
+        return List.of("io.dmarkwat.twitter.finagle.tracing.otel.instrumentation.Helper");
     }
 }
